Issue #3038 styled scrollbar

--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -51,7 +51,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 
 /* table with fixed header in ufosTable widget */
 .airvis-table-with-fixed-header { position: absolute; bottom: 0; left: 0; right: 0; top: 42px;}
-.airvis-table-with-fixed-header-inner { height: 100%; overflow-x: hidden; overflow-y: auto;}
+.airvis-table-with-fixed-header-inner { height: 218px; width: 370px; position: relative; overflow: visible !important;}
 .airvis-table-with-fixed-header table { margin: 0; overflow: hidden; position: static; width: 100%; font-size: 12px; color: #ffffff;}
 .arvis-table-head-surrogate { width: 100%; height: 42px; background-color: rgba(0,47,64,.50);}
 .airvis-table-with-fixed-header table th { padding: 0; border: 0; font-size: 12px; line-height: 15px; text-align: left; font-weight: normal;}
@@ -69,6 +69,8 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 
 .airvis-window th.airvis-checkbox, 
 .airvis-window td.airvis-checkbox { padding: 0; text-align: center; width: 30px;}
+.airvis-window th.airvis-checkbox span.checkbox { background-color: #ffffff !important; background-position: 0 -12px;}
+.airvis-window th.airvis-checkbox span.unchecked { background-position: 0 -100px;}
 .airvis-window th.airvis-checkbox > div, 
 .airvis-window td.airvis-checkbox > div { width: 30px;}
 .airvis-window th.airvis-checkbox > div div { padding: 0;}
@@ -237,4 +239,15 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .gmap {}
 .gmap > div > .gmnoprint:nth-child(3n+1),
 .gmap > div > .gmnoprint:last-child { top: 40px !important;}
+
+.jspContainer { position:relative; overflow:hidden;}
+.jspPane { position:relative; height: 400px;}
+.jspVerticalBar { position:absolute; top:0; right:4px}
+.jspDrag { background:#00aeef; width:4px; cursor:pointer; position:relative;
+
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+
+}
 
