--- a/src/css/checkbox.css
+++ b/src/css/checkbox.css
@@ -7,6 +7,7 @@ span.checkbox {
     -webkit-border-radius: 2px;
     border-radius: 2px;
     line-height: 12px;
+    cursor: pointer;
 }
 
 span.checkbox.checked {
